Fix and unify spacing across all sections

--- a/components/bg-primary.css
+++ b/components/bg-primary.css
@@ -1,10 +1,15 @@
-.bg-primary {
+.section-highlight {
   margin:0 auto;
   /* margin-bottom:130px; */
   background: var(--clr-primary-gradient);
   /* padding-bottom: var(--s700); */
   position: relative;
 }
-.bg-primary + .divider-left {
-  margin-top:-1px;
+.section-highlight + .divider-left {
+  margin-top: calc(var(--px1) * -1);
+  margin-bottom: var(--content-padding-y)
+}
+.section-highlight > .section:first-of-type > .max-content-width {
+  /* For highlight section padding compatibility */
+  padding-top: var(--content-padding-y);
 }
